# tfmllmserv

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run.sh  serve_model.py
tfmllmserv/: __init__.py  api.py  cli.py  download_model.py  janus_service.py  main.py  model_manager.py  ocr_app.py
tfmllmserv/static/: index.html
